--- a/_config.yml
+++ b/_config.yml
@@ -1,14 +1,17 @@
 # Site settings
-title: Your awesome title
-email: your-email@domain.com
+title: Li Yingwei
+email1: liyw14#fudan.edu.cn
+email2: prclyw#gmail.com
 description: > # this means to ignore newlines until "baseurl:"
-  Write an awesome description for your new site here. You can edit this
-  line in _config.yml. It will appear in your document head meta (for
-  Google search results) and in your feed.xml site description.
+  14ComputerScience @ Fudan University</br>
+  Learning Frontend</br>
+  ACM-ICPC Participant</br>
+  
 baseurl: "" # the subpath of your site, e.g. /blog/
-url: "http://yourdomain.com" # the base hostname & protocol for your site
-twitter_username: jekyllrb
-github_username:  jekyll
-
+url: "http://LiYingwei.github.io" # the base hostname & protocol for your site
+twitter_username: SpaceQX
+github_username:  LiYingwei
+zhihu_username: yingwei-li
+encoding: utf-8
 # Build settings
 markdown: kramdown
