Front-end Learner

--- a/_config.yml
+++ b/_config.yml
@@ -4,7 +4,7 @@ email1: liyw14#fudan.edu.cn
 email2: prclyw#gmail.com
 description: > # this means to ignore newlines until "baseurl:"
   14ComputerScience @ Fudan University</br>
-  Learning Frontend</br>
+  Front-end Learner</br>
   ACM-ICPC Participant</br>
   
 baseurl: "" # the subpath of your site, e.g. /blog/
